Added lasagna.html file and link to file from index.html

--- a/lasagna.html
+++ b/lasagna.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipies</h1>
-    <a href="./lasagna.html" target="_self">Lasagna Recipe</a>
+    <h1>Lasagna</h1>
 </body>
 </html>
