Added img, steps, and ingredients to lasagna

--- a/lasagna.html
+++ b/lasagna.html
@@ -7,6 +7,31 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://imgs.search.brave.com/WpIcrNCEDtC-lYjmUk7VGaiPfHOj0JmOe7lWblfpkx4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAyLzQ0LzE3Lzc5/LzM2MF9GXzI0NDE3/Nzk1Nl9ic1pQaE10/NWJVcm1mdGVSajFw/Zml5ekNUMzU4clF6/Si5qcGc">
+    <hr>
+    <p>This lasagna recipe will change your life! Just ask my son, the first time that he had a bite of this original Italian lasagna his life was changed. He went from being just a normal son to being a super son! He lived on to become one of the world's best humans, even getting a "Best Human" award. It was amazing, he became really successful, from rags to riches, effectively!</p>
+    <hr>
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>Lasagna Noodles</li>
+        <li>Tomato Sauce</li>
+        <li>Mozzerela Cheese</li>
+        <li>Ground Beef</li>
+        <li>A whole lot of love!</li>
+    </ul>
+    <h4>Steps:</h4>
+    <ol>
+        <li>Cook the Lasagna Noodles</li>
+        <li>While doing step 1, Brown the ground beef</li>
+        <li>Layer the bottom of the pan with noodles</li>
+        <li>Add some sauce on top of the bottom layer</li>
+        <li>Add cheese</li>
+        <li>Add anothe layer of noodles</li>
+        <li>Repeat the last 3 steps as much as you would like!</li>
+        <li>Top off the lasagna with one last layer of Mozzerela</li>
+        <li>Pop the pan in the oven @ 350 degrees Fahrenheit, and leave it there for 45 minutes</li>
+        <li>Enjoy!</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
