--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="./lasagna.html" target="_self">Lasagna Recipe</a>
+    <a href="./prawns.html" target="_self">Prawns Recipe</a>
 </body>
 </html>
