--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="./lasagna.html" target="_self">Lasagna Recipe</a>
-    <a href="./prawns.html" target="_self">Prawns Recipe</a>
+    <ul>
+        <li><a href="./lasagna.html" target="_self">Lasagna Recipe</a></li>
+        <li><a href="./prawns.html" target="_self">Prawns Recipe</a></li>
+        <li><a href="./eggs.html" target="_self">Eggs</a></li>
+    </ul>
+    
+    
 </body>
 </html>
